# Console_Cricket_Game

./: CMakeLists.txt  readme.md  readme.txt
inc/: AutoTeamSelector.h  TeamBuilding.h  TeamPlayerInfo.h  types.h
src/: AutoTeamSelector.cpp  CMakeLists.txt  TeamBuilding.cpp  TeamPlayerInfo.cpp  main.cpp
tst/: CMakeLists.txt  Test.cpp
